--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 		<title>Tradezy</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-[#222831]">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
